Rename client error property to errorMessages
